Updated documentation for Java 17 and simplified Java 17's Mockito example.